syntax = "proto3";

package tkd.orthanc_bridge.v1;

import "google/protobuf/timestamp.proto";

enum SearchLevel {
    SEARCH_LEVEL_UNSPECIFIED = 0;
    SEARCH_LEVEL_PATIENT = 1;
    SEARCH_LEVEL_STUDY = 2;
    SEARCH_LEVEL_SERIES = 3;
    SEARCH_LEVEL_INSTANCE = 4;
}

service OrthancBridge {
    rpc SearchPatients(SearchPatientsRequest) returns (SearchPatientsResponse) {}
}

message SearchPatientsRequest {
    bool case_sensitive = 1;

    int64 limit = 2;
    int64 since = 3;

    repeated string requested_tags = 4;

    string patient_name = 5;
    string responsible_person = 6;

    // The date to search for. Might either be in one of the following formats:
    //  - YYYY : search withing a specified year
    //  - YYYY-MM: search within a specified month/year
    //  - YYYY-MM-DD: search at a specifc date.
    //
    string date = 7;

    // The orthanc instance that should be searched. If unspecified
    // orthanc-bridge will try to determine the best instance to search
    // given date is set.
    string instance = 8;
}

message SearchPatientsResponse {
    string id = 1;

    PatientMainTags main_tags = 2;
}

message PatientMainTags {
    string patient_name = 1;
    string patient_id = 2;
    string patient_birth_date = 3; // YYYY-MM-DD
    string patient_sex = 4;
    repeated string other_patient_ids = 5;
}

message StudyMainTags {
    google.protobuf.Timestamp time = 1; // from StudyDate and StudyTime
    string study_id = 2;
    string study_description = 3;
    string accession_number = 4;
    string study_instance_uid = 5;
    string requested_precedure_description = 6;
    string institution_name = 7;
    string requesting_physician = 8;
    string reffering_pysician_name = 9;
}

message SeriesMainTags {
    google.protobuf.Timestamp time = 1; // from SeriesDate and SeriesTime
    string modality = 2;
    string manufacturer = 3;
    string station_name = 4;
    string series_description = 5;
    string body_part_examined = 6;
    string sequence_name = 7;
    string protocol_name = 8;
    string series_number = 9;
    string series_instance_uid = 10;
    string series_type = 11;
    string performed_procedure_step_description = 12;
}

message InstanceMainTags {
    google.protobuf.Timestamp time = 1; // from InstanceCreationDate and InstanceCreationTime
    int64 acquisition_number = 2;
    string image_comments = 3;
}
